--- a/.luarc.json
+++ b/.luarc.json
@@ -49,6 +49,7 @@
         "/home/sky/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
         "/home/sky/.local/share/nvim/site/pack/packer/start/crates.nvim/after",
         "/usr/share/vim/vimfiles",
-        "${3rd}/luassert/library"
+        "${3rd}/luassert/library",
+        "${3rd}/luv/library"
     ]
 }
